Fixed navbar scrolling for PLAY section Includes PLAY section header when scrolling to section, instead of cutting off and going straight to content

--- a/styles.css
+++ b/styles.css
@@ -137,6 +137,10 @@ img {
     scroll-margin-top: 150px;
 }
 
+#PLAY {
+    scroll-margin-top: 150px;
+}
+
 #beyond {
     color:black;
     text-decoration: none;
